--- a/ai-maturity.html
+++ b/ai-maturity.html
@@ -71,6 +71,25 @@
         .site-nav a:hover { color: #1F7A8C; }
         .site-nav a.active { color: #1F7A8C; }
 
+        .site-nav .nav-cta {
+            background: #022B3A; color: white; padding: 10px 22px;
+            border-radius: 6px; font-size: 0.9em; font-weight: 600; transition: background 0.2s;
+        }
+        .site-nav .nav-cta:hover { color: white; background: #1F7A8C; }
+
+        .hamburger { display: none; flex-direction: column; gap: 5px; cursor: pointer; padding: 6px; z-index: 100; }
+        .hamburger span { display: block; width: 24px; height: 2px; background: #022B3A; transition: all 0.3s; }
+        .hamburger.open span:nth-child(1) { transform: rotate(45deg) translate(5px, 5px); }
+        .hamburger.open span:nth-child(2) { opacity: 0; }
+        .hamburger.open span:nth-child(3) { transform: rotate(-45deg) translate(5px, -5px); }
+
+        .mobile-menu { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: white; z-index: 95; padding: 100px 40px 40px; flex-direction: column; gap: 0; }
+        .mobile-menu.open { display: flex; }
+        .mobile-menu a { color: #022B3A; text-decoration: none; font-size: 1.2em; font-weight: 500; padding: 18px 0; border-bottom: 1px solid #eee; transition: color 0.2s; }
+        .mobile-menu a:hover { color: #1F7A8C; }
+        .mobile-menu .nav-cta { display: inline-block; background: #022B3A; color: white; padding: 16px 28px; border-radius: 8px; font-size: 1.1em; font-weight: 600; text-align: center; margin-top: 16px; border-bottom: none; }
+        .mobile-menu .nav-cta:hover { color: white; background: #1F7A8C; }
+
         /* ==================== PAGE HERO ==================== */
         .page-hero {
             background: linear-gradient(135deg, #022B3A 0%, #1F7A8C 100%);
@@ -587,8 +606,9 @@
 
         /* ==================== RESPONSIVE ==================== */
         @media (max-width: 768px) {
-            header { padding: 20px 30px; justify-content: center; }
+            header { padding: 20px 30px; justify-content: space-between; }
             .site-nav { display: none; }
+            .hamburger { display: flex; }
 
             .page-hero { padding: 50px 30px; }
             .page-hero h1 { font-size: 2em; }
@@ -636,11 +656,21 @@
         </a>
         <nav class="site-nav">
             <a href="index.html#approach">Our Approach</a>
-            <a href="prompt-examples.html">Prompt Examples</a>
+            <a href="learn.html">Learn</a>
             <a href="ai-maturity.html" class="active">AI Assessment</a>
-            <a href="index.html#work-with-us">Work With Us</a>
+            <a href="index.html#work-with-us" class="nav-cta">Work With Us</a>
         </nav>
+        <div class="hamburger" onclick="toggleMobileMenu()">
+            <span></span><span></span><span></span>
+        </div>
     </header>
+
+    <div class="mobile-menu" id="mobileMenu">
+        <a href="index.html#approach" onclick="closeMobileMenu()">Our Approach</a>
+        <a href="learn.html">Learn</a>
+        <a href="ai-maturity.html">AI Assessment</a>
+        <a href="index.html#work-with-us" class="nav-cta">Work With Us</a>
+    </div>
 
     <section class="page-hero">
         <h1>Find Your KnownState</h1>
@@ -890,6 +920,18 @@
 </div>
 
 <script>
+    // Mobile menu
+    function toggleMobileMenu() {
+        document.querySelector('.hamburger').classList.toggle('open');
+        document.getElementById('mobileMenu').classList.toggle('open');
+        document.body.style.overflow = document.getElementById('mobileMenu').classList.contains('open') ? 'hidden' : '';
+    }
+    function closeMobileMenu() {
+        document.querySelector('.hamburger').classList.remove('open');
+        document.getElementById('mobileMenu').classList.remove('open');
+        document.body.style.overflow = '';
+    }
+
     const stageData = {
         1: {
             title: 'Stage 1: Ad Hoc',
