--- a/ai-maturity.html
+++ b/ai-maturity.html
@@ -77,14 +77,16 @@
         }
         .site-nav .nav-cta:hover { color: white; background: #1F7A8C; }
 
-        .hamburger { display: none; flex-direction: column; gap: 5px; cursor: pointer; padding: 6px; z-index: 100; }
-        .hamburger span { display: block; width: 24px; height: 2px; background: #022B3A; transition: all 0.3s; }
-        .hamburger.open span:nth-child(1) { transform: rotate(45deg) translate(5px, 5px); }
-        .hamburger.open span:nth-child(2) { opacity: 0; }
-        .hamburger.open span:nth-child(3) { transform: rotate(-45deg) translate(5px, -5px); }
+        .menu-toggle { display: none; }
 
-        .mobile-menu { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: white; z-index: 95; padding: 100px 40px 40px; flex-direction: column; gap: 0; }
-        .mobile-menu.open { display: flex; }
+        .hamburger { display: none; flex-direction: column; gap: 5px; cursor: pointer; padding: 10px; z-index: 101; -webkit-tap-highlight-color: transparent; touch-action: manipulation; min-width: 44px; min-height: 44px; align-items: center; justify-content: center; }
+        .hamburger span { display: block; width: 24px; height: 2.5px; background: #022B3A; transition: all 0.3s; border-radius: 2px; pointer-events: none; }
+        .menu-toggle:checked ~ .page-wrapper .hamburger span:nth-child(1) { transform: rotate(45deg) translate(5px, 5px); }
+        .menu-toggle:checked ~ .page-wrapper .hamburger span:nth-child(2) { opacity: 0; }
+        .menu-toggle:checked ~ .page-wrapper .hamburger span:nth-child(3) { transform: rotate(-45deg) translate(5px, -5px); }
+
+        .mobile-menu { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: white; z-index: 99; padding: 100px 40px 40px; flex-direction: column; gap: 0; overflow-y: auto; }
+        .menu-toggle:checked ~ .mobile-menu { display: flex; }
         .mobile-menu a { color: #022B3A; text-decoration: none; font-size: 1.2em; font-weight: 500; padding: 18px 0; border-bottom: 1px solid #eee; transition: color 0.2s; }
         .mobile-menu a:hover { color: #1F7A8C; }
         .mobile-menu .nav-cta { display: inline-block; background: #022B3A; color: white; padding: 16px 28px; border-radius: 8px; font-size: 1.1em; font-weight: 600; text-align: center; margin-top: 16px; border-bottom: none; }
@@ -642,6 +644,7 @@
     </style>
 </head>
 <body>
+<input type="checkbox" id="menuToggle" class="menu-toggle">
 <div class="page-wrapper">
 
     <header>
@@ -658,19 +661,12 @@
             <a href="index.html#approach">Our Approach</a>
             <a href="learn.html">Learn</a>
             <a href="ai-maturity.html" class="active">AI Assessment</a>
-            <a href="index.html#work-with-us" class="nav-cta">Work With Us</a>
+            <a href="#" class="nav-cta" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/griffithsben-pm/30min'});return false;">Work With Us</a>
         </nav>
-        <div class="hamburger" onclick="toggleMobileMenu()">
+        <label for="menuToggle" class="hamburger">
             <span></span><span></span><span></span>
-        </div>
+        </label>
     </header>
-
-    <div class="mobile-menu" id="mobileMenu">
-        <a href="index.html#approach" onclick="closeMobileMenu()">Our Approach</a>
-        <a href="learn.html">Learn</a>
-        <a href="ai-maturity.html">AI Assessment</a>
-        <a href="index.html#work-with-us" class="nav-cta">Work With Us</a>
-    </div>
 
     <section class="page-hero">
         <h1>Find Your KnownState</h1>
@@ -885,11 +881,11 @@
             <div class="breakdown-grid" id="breakdown-grid"></div>
 
             <div class="pathways">
-                <a href="prompt-examples.html" class="pathway-card explore">
+                <a href="learn.html" class="pathway-card explore">
                     <h3>Find your knownstate</h3>
-                    <p>Explore prompt examples and resources to start improving on your own</p>
+                    <p>Free resources, prompt examples, and tools to start improving on your own</p>
                 </a>
-                <a href="index.html#work-with-us" class="pathway-card engage">
+                <a href="#" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/griffithsben-pm/30min'});return false;" class="pathway-card engage">
                     <h3>Establish your knownstate</h3>
                     <p>A guided engagement — we work with you to build a structured approach</p>
                 </a>
@@ -903,7 +899,7 @@
     <section class="page-cta">
         <h3>This is just the starting point.</h3>
         <p>A 20-minute conversation about where AI fits in your business.</p>
-        <button class="cta-button" onclick="window.location.href='index.html#work-with-us'">Start a Conversation</button>
+        <button class="cta-button" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/griffithsben-pm/30min'});return false;">Start a Conversation</button>
 
         <div class="footer-main">
             <div class="footer-brand">knownstateai</div>
@@ -919,18 +915,24 @@
 
 </div>
 
+<!-- Mobile menu -->
+<div class="mobile-menu" id="mobileMenu">
+    <a href="index.html#approach">Our Approach</a>
+    <a href="learn.html">Learn</a>
+    <a href="ai-maturity.html">AI Assessment</a>
+    <a href="#" class="nav-cta" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/griffithsben-pm/30min'});return false;">Work With Us</a>
+</div>
+
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+
 <script>
-    // Mobile menu
-    function toggleMobileMenu() {
-        document.querySelector('.hamburger').classList.toggle('open');
-        document.getElementById('mobileMenu').classList.toggle('open');
-        document.body.style.overflow = document.getElementById('mobileMenu').classList.contains('open') ? 'hidden' : '';
-    }
-    function closeMobileMenu() {
-        document.querySelector('.hamburger').classList.remove('open');
-        document.getElementById('mobileMenu').classList.remove('open');
-        document.body.style.overflow = '';
-    }
+    // Close mobile menu on link click
+    document.querySelectorAll('.mobile-menu a').forEach(function(link) {
+        link.addEventListener('click', function() {
+            document.getElementById('menuToggle').checked = false;
+        });
+    });
 
     const stageData = {
         1: {
