--- a/ai-maturity.html
+++ b/ai-maturity.html
@@ -85,14 +85,14 @@
         .menu-toggle:checked ~ .page-wrapper .hamburger span:nth-child(2) { opacity: 0; }
         .menu-toggle:checked ~ .page-wrapper .hamburger span:nth-child(3) { transform: rotate(-45deg) translate(5px, -5px); }
 
-        .mobile-menu { display: none; position: fixed; top: 0; right: 0; width: 280px; height: auto; max-height: 100vh; background: white; z-index: 99; padding: 80px 30px 30px; flex-direction: column; gap: 0; box-shadow: -4px 0 24px rgba(0,0,0,0.15); overflow-y: auto; }
+        .mobile-menu { display: none; position: fixed; top: 0; right: 0; width: 280px; height: auto; max-height: 100vh; background: #022B3A; z-index: 99; padding: 20px 24px 30px; flex-direction: column; gap: 0; box-shadow: -4px 0 24px rgba(0,0,0,0.25); overflow-y: auto; }
         .menu-toggle:checked ~ .mobile-menu { display: flex; }
         .menu-overlay { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.3); z-index: 98; }
         .menu-toggle:checked ~ .menu-overlay { display: block; }
-        .mobile-menu a { color: #022B3A; text-decoration: none; font-size: 1.05em; font-weight: 500; padding: 16px 0; border-bottom: 1px solid #eee; transition: color 0.2s; }
-        .mobile-menu a:hover { color: #1F7A8C; }
-        .mobile-menu .nav-cta { display: inline-block; background: #022B3A; color: white; padding: 14px 24px; border-radius: 8px; font-size: 1em; font-weight: 600; text-align: center; margin-top: 16px; border-bottom: none; }
-        .mobile-menu .nav-cta:hover { color: white; background: #1F7A8C; }
+        .mobile-menu a { color: rgba(255,255,255,0.85); text-decoration: none; font-size: 1.05em; font-weight: 500; padding: 16px 0; border-bottom: 1px solid rgba(255,255,255,0.1); transition: color 0.2s; }
+        .mobile-menu a:hover { color: white; }
+        .mobile-menu .nav-cta { display: inline-block; background: white; color: #022B3A; padding: 14px 24px; border-radius: 8px; font-size: 1em; font-weight: 600; text-align: center; margin-top: 16px; border-bottom: none; }
+        .mobile-menu .nav-cta:hover { color: #022B3A; background: #BFDBF7; }
 
         /* ==================== PAGE HERO ==================== */
         .page-hero {
