--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
             width: 280px;
             height: auto;
             max-height: 100vh;
-            background: white;
+            background: #022B3A;
             z-index: 99;
-            padding: 80px 30px 30px;
+            padding: 20px 24px 30px;
             flex-direction: column;
             gap: 0;
-            box-shadow: -4px 0 24px rgba(0,0,0,0.15);
+            box-shadow: -4px 0 24px rgba(0,0,0,0.25);
             overflow-y: auto;
         }
 
@@ -184,23 +184,23 @@
         }
 
         .mobile-menu a {
-            color: #022B3A;
+            color: rgba(255,255,255,0.85);
             text-decoration: none;
             font-size: 1.05em;
             font-weight: 500;
             padding: 16px 0;
-            border-bottom: 1px solid #eee;
+            border-bottom: 1px solid rgba(255,255,255,0.1);
             transition: color 0.2s;
         }
 
         .mobile-menu a:hover {
-            color: #1F7A8C;
+            color: white;
         }
 
         .mobile-menu .nav-cta {
             display: inline-block;
-            background: #022B3A;
-            color: white;
+            background: white;
+            color: #022B3A;
             padding: 14px 24px;
             border-radius: 8px;
             font-size: 1em;
@@ -211,8 +211,8 @@
         }
 
         .mobile-menu .nav-cta:hover {
-            color: white;
-            background: #1F7A8C;
+            color: #022B3A;
+            background: #BFDBF7;
         }
         
         .logo-with-tagline {
