--- a/ai-maturity.html
+++ b/ai-maturity.html
@@ -79,20 +79,27 @@
 
         .menu-toggle { display: none; }
 
-        .hamburger { display: none; flex-direction: column; gap: 5px; cursor: pointer; padding: 10px; z-index: 101; -webkit-tap-highlight-color: transparent; touch-action: manipulation; min-width: 44px; min-height: 44px; align-items: center; justify-content: center; }
+        .hamburger { display: none; flex-direction: column; gap: 5px; cursor: pointer; padding: 10px; z-index: 110; -webkit-tap-highlight-color: transparent; touch-action: manipulation; min-width: 44px; min-height: 44px; align-items: center; justify-content: center; }
         .hamburger span { display: block; width: 24px; height: 2.5px; background: #022B3A; transition: all 0.3s; border-radius: 2px; pointer-events: none; }
         .menu-toggle:checked ~ .page-wrapper .hamburger span:nth-child(1) { transform: rotate(45deg) translate(5px, 5px); }
         .menu-toggle:checked ~ .page-wrapper .hamburger span:nth-child(2) { opacity: 0; }
         .menu-toggle:checked ~ .page-wrapper .hamburger span:nth-child(3) { transform: rotate(-45deg) translate(5px, -5px); }
 
-        .mobile-menu { display: none; position: fixed; top: 0; right: 0; width: 280px; height: auto; max-height: 100vh; background: #022B3A; z-index: 99; padding: 20px 24px 30px; flex-direction: column; gap: 0; box-shadow: -4px 0 24px rgba(0,0,0,0.25); overflow-y: auto; }
-        .menu-toggle:checked ~ .mobile-menu { display: flex; }
-        .menu-overlay { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.3); z-index: 98; }
-        .menu-toggle:checked ~ .menu-overlay { display: block; }
-        .mobile-menu a { color: rgba(255,255,255,0.85); text-decoration: none; font-size: 1.05em; font-weight: 500; padding: 16px 0; border-bottom: 1px solid rgba(255,255,255,0.1); transition: color 0.2s; }
-        .mobile-menu a:hover { color: white; }
-        .mobile-menu .nav-cta { display: inline-block; background: white; color: #022B3A; padding: 14px 24px; border-radius: 8px; font-size: 1em; font-weight: 600; text-align: center; margin-top: 16px; border-bottom: none; }
-        .mobile-menu .nav-cta:hover { color: #022B3A; background: #BFDBF7; }
+        .mobile-sidebar { position: fixed; top: 0; right: -300px; width: 280px; height: 100vh; background: white; z-index: 105; display: flex; flex-direction: column; box-shadow: -4px 0 24px rgba(0,0,0,0.12); transition: right 0.3s ease; overflow-y: auto; }
+        .menu-toggle:checked ~ .mobile-sidebar { right: 0; }
+        .menu-overlay { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.4); z-index: 104; opacity: 0; pointer-events: none; transition: opacity 0.3s ease; }
+        .menu-toggle:checked ~ .menu-overlay { opacity: 1; pointer-events: auto; }
+        .sidebar-header { padding: 24px 24px 20px; border-bottom: 1px solid #eee; display: flex; align-items: center; gap: 12px; }
+        .sidebar-header svg { width: 36px; height: 36px; }
+        .sidebar-brand { font-size: 1.1em; font-weight: 600; color: #022B3A; letter-spacing: -0.02em; text-transform: lowercase; }
+        .sidebar-links { padding: 8px 0; flex: 1; }
+        .sidebar-links a { display: block; color: #333; text-decoration: none; font-size: 1em; font-weight: 500; padding: 16px 24px; transition: all 0.2s; border-left: 3px solid transparent; }
+        .sidebar-links a:hover, .sidebar-links a:active { background: #f8f8f8; color: #1F7A8C; border-left-color: #1F7A8C; }
+        .sidebar-cta { padding: 16px 24px 24px; border-top: 1px solid #eee; }
+        .sidebar-cta a { display: block; background: #022B3A; color: white; text-decoration: none; padding: 14px 24px; border-radius: 8px; font-size: 0.95em; font-weight: 600; text-align: center; transition: background 0.2s; }
+        .sidebar-cta a:hover { background: #1F7A8C; }
+        
+        
 
         /* ==================== PAGE HERO ==================== */
         .page-hero {
@@ -920,12 +927,25 @@
 <!-- Mobile overlay -->
 <label for="menuToggle" class="menu-overlay"></label>
 
-<!-- Mobile menu -->
-<div class="mobile-menu" id="mobileMenu">
-    <a href="index.html#approach">Our Approach</a>
-    <a href="learn.html">Learn</a>
-    <a href="ai-maturity.html">AI Assessment</a>
-    <a href="#" class="nav-cta" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/griffithsben-pm/30min'});return false;">Work With Us</a>
+<!-- Mobile sidebar -->
+<div class="mobile-sidebar">
+    <div class="sidebar-header">
+        <svg viewBox="0 0 110 110">
+            <rect x="5" y="5" width="100" height="100" rx="20" fill="#022B3A"/>
+            <circle cx="55" cy="55" r="38" fill="none" stroke="#BFDBF7" stroke-width="2" opacity="0.3"/>
+            <circle cx="55" cy="55" r="27" fill="none" stroke="#1F7A8C" stroke-width="2.5"/>
+            <circle cx="55" cy="55" r="17" fill="#BFDBF7"/>
+        </svg>
+        <span class="sidebar-brand">knownstateai</span>
+    </div>
+    <div class="sidebar-links">
+        <a href="index.html#approach">Our Approach</a>
+        <a href="learn.html">Learn</a>
+        <a href="ai-maturity.html">AI Assessment</a>
+    </div>
+    <div class="sidebar-cta">
+        <a href="#" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/griffithsben-pm/30min'});return false;">Work With Us</a>
+    </div>
 </div>
 
 <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
@@ -933,7 +953,7 @@
 
 <script>
     // Close mobile menu on link click
-    document.querySelectorAll('.mobile-menu a').forEach(function(link) {
+    document.querySelectorAll('.sidebar-links a, .sidebar-cta a').forEach(function(link) {
         link.addEventListener('click', function() {
             document.getElementById('menuToggle').checked = false;
         });
