--- a/index.html
+++ b/index.html
@@ -1203,7 +1203,7 @@
 
     <!-- Mobile sidebar -->
     <div class="mobile-sidebar">
-        <div class="sidebar-header">
+        <a href="index.html" class="sidebar-header" style="text-decoration:none;">
             <svg viewBox="0 0 110 110">
                 <rect x="5" y="5" width="100" height="100" rx="20" fill="#022B3A"/>
                 <circle cx="55" cy="55" r="38" fill="none" stroke="#BFDBF7" stroke-width="2" opacity="0.3"/>
@@ -1211,7 +1211,7 @@
                 <circle cx="55" cy="55" r="17" fill="#BFDBF7"/>
             </svg>
             <span class="sidebar-brand">knownstateai</span>
-        </div>
+        </a>
         <div class="sidebar-links">
             <a href="#approach">Our Approach</a>
             <a href="learn.html">Learn</a>
