--- a/learn.html
+++ b/learn.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn AI — Free Resources for Business | KnownStateAI Brisbane</title>
     <meta name="description" content="Free AI learning resources for Australian businesses. Prompt examples, curated videos, articles, and tools to help you get real results from AI — from KnownStateAI Brisbane.">
-    <meta name="keywords" content="free AI training Brisbane, learn AI for business, AI resources small business, AI education Queensland">
+    <meta name="keywords" content="free AI training Brisbane, learn AI for business, business AI resources, AI education Queensland">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -586,7 +586,6 @@
     <div class="jump-bar">
         <button class="jump-btn" onclick="window.location.href='prompt-examples.html'">Prompt Examples</button>
         <button class="jump-btn" onclick="document.getElementById('videos').scrollIntoView({behavior:'smooth'})">Videos</button>
-        <button class="jump-btn" onclick="document.getElementById('free-gpts').scrollIntoView({behavior:'smooth'})">Free GPTs</button>
         <button class="jump-btn" onclick="document.getElementById('resources').scrollIntoView({behavior:'smooth'})">Resources</button>
         <button class="jump-btn" onclick="document.getElementById('news').scrollIntoView({behavior:'smooth'})">News</button>
     </div>
@@ -668,6 +667,7 @@
     </div>
 
     <!-- SECTION 3: FREE GPTs -->
+    <!-- FREE GPTs - HIDDEN PENDING APPROVAL
     <div class="learn-section" id="free-gpts">
         <div class="section-header">
             <div class="section-tag">Try them now</div>
@@ -714,6 +714,7 @@
             </a>
         </div>
     </div>
+    END FREE GPTs -->
 
     <!-- SECTION 4: TOOLS & RESOURCES -->
     <div class="learn-section" id="resources">
@@ -857,7 +858,7 @@
                 </div>
                 <div class="news-content">
                     <h4>Microsoft Copilot Updates: What Changed in February 2025</h4>
-                    <p>Summary of the latest Copilot features and what they mean for small business users.</p>
+                    <p>Summary of the latest Copilot features and what they mean for business users.</p>
                     <span class="news-tag news">News</span>
                 </div>
             </a>
