--- a/ai-maturity.html
+++ b/ai-maturity.html
@@ -5,6 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Maturity Assessment — Find Your KnownState | KnownStateAI Brisbane</title>
     <meta name="description" content="Self-assess your business AI maturity in 2 minutes. Find out if your AI usage is Ad Hoc, Aware, or Assessed — and get a clear path forward. Free AI assessment from KnownStateAI Brisbane.">
+    <meta name="keywords" content="AI maturity assessment, business AI readiness, AI assessment Brisbane, AI maturity model, free AI assessment Australia">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="AI Maturity Assessment — Find Your KnownState | KnownStateAI">
+    <meta property="og:description" content="Self-assess your business AI maturity in 2 minutes. Find out if your AI usage is Ad Hoc, Aware, or Assessed — and get a clear path forward.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://knownstateai.com/ai-maturity.html">
+
+    <!-- Schema.org -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "AI Maturity Assessment",
+      "description": "Self-assess your business AI maturity in 2 minutes. Find out if your AI usage is Ad Hoc, Aware, or Assessed — and get a clear path forward.",
+      "publisher": {
+        "@type": "ProfessionalService",
+        "name": "KnownStateAI",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Brisbane",
+          "addressRegion": "QLD",
+          "addressCountry": "AU"
+        }
+      }
+    }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
