--- a/beyond-prompts.html
+++ b/beyond-prompts.html
@@ -6,6 +6,32 @@
     <title>Beyond Prompts — AI Agents | KnownStateAI</title>
     <meta name="description" content="AI agents automate entire workflows — not just answer questions. See real examples of agents handling finance, HR, sales, operations and more.">
     <meta name="keywords" content="AI agents, AI automation, business AI agents, AI workflows, AI consulting Brisbane, AI consultant Australia">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Beyond Prompts — AI Agents | KnownStateAI">
+    <meta property="og:description" content="AI agents automate entire workflows — not just answer questions. See real examples across finance, HR, sales, and operations.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://knownstateai.com/beyond-prompts.html">
+
+    <!-- Schema.org -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Beyond Prompts — AI Agents",
+      "description": "AI agents automate entire workflows — not just answer questions. See real examples of agents handling finance, HR, sales, operations and more.",
+      "publisher": {
+        "@type": "ProfessionalService",
+        "name": "KnownStateAI",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Brisbane",
+          "addressRegion": "QLD",
+          "addressCountry": "AU"
+        }
+      }
+    }
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
