--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Brisbane AI Training That Actually Works | AI Consulting for Brisbane Businesses | KnownStateAI</title>
     <meta name="description" content="Brisbane-based AI training and consulting for businesses. We help you implement ChatGPT, Copilot & AI tools with measurable outcomes. Expert AI implementation with proven ROI tracking.">
     <meta name="keywords" content="AI training Brisbane, AI consultant Brisbane, ChatGPT training, Copilot implementation, business AI consulting, AI automation Brisbane, AI strategy Queensland, AI consultant Australia, AI training Australia">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Brisbane AI Training That Actually Works | KnownStateAI">
+    <meta property="og:description" content="Brisbane-based AI training and consulting for businesses. Free learning resources and expert implementation with measurable outcomes.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://knownstateai.com/">
     
     <!-- Local Business Schema for SEO -->
     <script type="application/ld+json">
