--- a/learn.html
+++ b/learn.html
@@ -6,6 +6,32 @@
     <title>Learn AI — Free Resources for Business | KnownStateAI Brisbane</title>
     <meta name="description" content="Free AI learning resources for Australian businesses. Prompt examples, curated videos, articles, and tools to help you get real results from AI — from KnownStateAI Brisbane.">
     <meta name="keywords" content="free AI training Brisbane, learn AI for business, business AI resources, AI education Queensland">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Learn AI — Free Resources for Business | KnownStateAI">
+    <meta property="og:description" content="Free AI learning resources for Australian businesses. Prompt examples, curated videos, articles, and tools to help you get real results from AI.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://knownstateai.com/learn.html">
+
+    <!-- Schema.org -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Learn AI — Free Resources for Business",
+      "description": "Free AI learning resources for Australian businesses. Prompt examples, curated videos, articles, and tools to help you get real results from AI.",
+      "publisher": {
+        "@type": "ProfessionalService",
+        "name": "KnownStateAI",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Brisbane",
+          "addressRegion": "QLD",
+          "addressCountry": "AU"
+        }
+      }
+    }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
