--- a/prompt-examples.html
+++ b/prompt-examples.html
@@ -5,6 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Prompt Examples: Before & After | Real Business Results | KnownStateAI</title>
     <meta name="description" content="See real AI prompt improvements across finance, HR, operations, and executive roles. Measurable time savings from structured prompting — from KnownStateAI Brisbane.">
+    <meta name="keywords" content="AI prompt examples, business AI prompts, ChatGPT prompts for business, prompt engineering Brisbane, AI training examples">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="AI Prompt Examples: Before & After | KnownStateAI">
+    <meta property="og:description" content="See real AI prompt improvements across finance, HR, operations, and executive roles. Measurable time savings from structured prompting.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://knownstateai.com/prompt-examples.html">
+
+    <!-- Schema.org -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "AI Prompt Examples: Before & After",
+      "description": "See real AI prompt improvements across finance, HR, operations, and executive roles. Measurable time savings from structured prompting.",
+      "publisher": {
+        "@type": "ProfessionalService",
+        "name": "KnownStateAI",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Brisbane",
+          "addressRegion": "QLD",
+          "addressCountry": "AU"
+        }
+      }
+    }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
