--- a/ai-maturity.html
+++ b/ai-maturity.html
@@ -704,7 +704,7 @@
 
     <section class="page-hero">
         <h1>Find Your KnownState</h1>
-        <p>A quick self-assessment to see where your business sits with AI — and what to do next.</p>
+        <p>A quick self-assessment to see where your business sits with AI, and what to do next.</p>
         <div class="hero-meta">6 questions · 2 minutes to complete</div>
     </section>
 
@@ -728,7 +728,7 @@
                     <div class="mc-radio"></div>
                     <div class="mc-label">
                         <span class="mc-stage">Stage 1 · Ad Hoc</span>
-                        <span class="mc-text">People experiment individually — there's no shared approach or visibility into who's using what</span>
+                        <span class="mc-text">People experiment individually, but there's no shared approach or visibility into who's using what</span>
                     </div>
                 </div>
                 <div class="mc-option" onclick="selectOption(this, 2)" data-value="2">
@@ -756,7 +756,7 @@
                     <div class="mc-radio"></div>
                     <div class="mc-label">
                         <span class="mc-stage">Stage 1 · Ad Hoc</span>
-                        <span class="mc-text">Everyone writes their own prompts from scratch each time — no templates, no sharing</span>
+                        <span class="mc-text">Everyone writes their own prompts from scratch each time, no templates, no sharing</span>
                     </div>
                 </div>
                 <div class="mc-option" onclick="selectOption(this, 2)" data-value="2">
@@ -784,14 +784,14 @@
                     <div class="mc-radio"></div>
                     <div class="mc-label">
                         <span class="mc-stage">Stage 1 · Ad Hoc</span>
-                        <span class="mc-text">No — we have no idea if it's saving time or improving quality</span>
+                        <span class="mc-text">No, we have no idea if it's saving time or improving quality</span>
                     </div>
                 </div>
                 <div class="mc-option" onclick="selectOption(this, 2)" data-value="2">
                     <div class="mc-radio"></div>
                     <div class="mc-label">
                         <span class="mc-stage">Stage 2 · Aware</span>
-                        <span class="mc-text">Anecdotally, yes — people say it helps, but we don't have data</span>
+                        <span class="mc-text">Anecdotally yes, however people say it helps but we don't have the data</span>
                     </div>
                 </div>
                 <div class="mc-option" onclick="selectOption(this, 3)" data-value="3">
@@ -812,7 +812,7 @@
                     <div class="mc-radio"></div>
                     <div class="mc-label">
                         <span class="mc-stage">Stage 1 · Ad Hoc</span>
-                        <span class="mc-text">Everyone gets the same tools — there's no role-specific setup or guidance</span>
+                        <span class="mc-text">Everyone gets the same tools, there's no role-specific setup or guidance</span>
                     </div>
                 </div>
                 <div class="mc-option" onclick="selectOption(this, 2)" data-value="2">
@@ -840,7 +840,7 @@
                     <div class="mc-radio"></div>
                     <div class="mc-label">
                         <span class="mc-stage">Stage 1 · Ad Hoc</span>
-                        <span class="mc-text">No — people use whatever tools they want, however they want</span>
+                        <span class="mc-text">No, people use whatever tools they want, however they want</span>
                     </div>
                 </div>
                 <div class="mc-option" onclick="selectOption(this, 2)" data-value="2">
@@ -868,14 +868,14 @@
                     <div class="mc-radio"></div>
                     <div class="mc-label">
                         <span class="mc-stage">Stage 1 · Ad Hoc</span>
-                        <span class="mc-text">No — if someone finds a good prompt or workflow, it stays with them</span>
+                        <span class="mc-text">No, if someone finds a good prompt or workflow, it stays with them</span>
                     </div>
                 </div>
                 <div class="mc-option" onclick="selectOption(this, 2)" data-value="2">
                     <div class="mc-radio"></div>
                     <div class="mc-label">
                         <span class="mc-stage">Stage 2 · Aware</span>
-                        <span class="mc-text">Sometimes informally — a few people share tips, but it's not systematic</span>
+                        <span class="mc-text">Sometimes informally, a few people share tips, but it's not systematic</span>
                     </div>
                 </div>
                 <div class="mc-option" onclick="selectOption(this, 3)" data-value="3">
@@ -921,7 +921,7 @@
                 </a>
                 <a href="#" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/griffithsben-pm/30min'});return false;" class="pathway-card engage">
                     <h3>Establish your knownstate</h3>
-                    <p>A guided engagement — we work with you to build a structured approach</p>
+                    <p>A guided engagement, we work with you to build a structured approach</p>
                 </a>
             </div>
 
@@ -986,15 +986,15 @@
     const stageData = {
         1: {
             title: 'Stage 1: Ad Hoc',
-            desc: "AI tools are available but usage is unstructured. Individual staff experiment independently, prompts aren't shared or refined, and there's no visibility into what's working or what's not. This is where most businesses start — and where the biggest gains are waiting."
+            desc: "AI tools are available but usage is unstructured. Individual staff experiment independently, prompts aren't shared or refined, and there's no visibility into what's working or what's not. This is where most businesses start, and where the biggest gains are waiting."
         },
         2: {
             title: 'Stage 2: Aware',
-            desc: "Some AI usage is deliberate. Your teams have identified specific use cases, but prompts are inconsistent, there's no measurement in place, and adoption varies significantly across roles. You're past the starting line — the next step is structure."
+            desc: "Some AI usage is deliberate. Your teams have identified specific use cases, but prompts are inconsistent, there's no measurement in place, and adoption varies significantly across roles. You're past the starting line, the next step is structure."
         },
         3: {
             title: 'Stage 3: Assessed',
-            desc: "AI usage is mapped to roles and responsibilities. Prompts are structured, outcomes are tracked, and continuous improvement is built into how the business operates. This is the knownstate — and the foundation for scaling AI impact."
+            desc: "AI usage is mapped to roles and responsibilities. Prompts are structured, outcomes are tracked, and continuous improvement is built into how the business operates. This is the knownstate, and the foundation for scaling AI impact."
         }
     };
 
