--- a/prompt-examples.html
+++ b/prompt-examples.html
@@ -1394,9 +1394,9 @@
                             <div class="mockup-titlebar"><span class="dot"></span><span class="dot"></span><span class="dot"></span><span>Performance Review — Word</span></div>
                             <div class="doc-body structured">
                                 <h3>Key Accomplishments</h3>
-                                <ul><li>Retention rate: 87% → 94% (target: 90%)</li><li>Onboarded 23 enterprise clients (target: 18)</li><li>Built customer health scoring system — adopted team-wide</li></ul>
+                                <ul><li>Retention rate: 87% → 94% (target: 90%)</li><li>Onboarded 23 enterprise clients (target: 18)</li><li>Built customer health scoring system, adopted team-wide</li></ul>
                                 <h3>Areas for Development</h3>
-                                <ul><li>QBR completion: 78% vs 95% target</li><li>Delegation — opportunity to develop team trust</li></ul>
+                                <ul><li>QBR completion: 78% vs 95% target</li><li>Delegation, opportunity to develop team trust</li></ul>
                                 <h3>Goals Progress</h3>
                                 <ul><li>Retention 90%: ✅ 104%</li><li>Onboard 18 clients: ✅ 128%</li><li>$2.1M renewals: ✅ 110% ($2.31M)</li></ul>
                                 <div class="rating-box"><strong>EXCEEDS EXPECTATIONS</strong><p>Exceeded all major KPIs. Health scoring system demonstrates strategic thinking beyond day-to-day responsibilities.</p></div>
@@ -1506,7 +1506,7 @@
 
     <!-- CTA -->
     <section class="page-cta">
-        <h3>These results come from structured prompting — not better tools.</h3>
+        <h3>These results come from structured prompting, not better tools.</h3>
         <p>A 20-minute conversation about where AI fits in your business.</p>
         <button class="cta-button" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/griffithsben-pm/30min'});return false;">Start a Conversation</button>
 
