--- a/index.html
+++ b/index.html
@@ -1287,8 +1287,8 @@
                         </div>
                         <div class="step-label">Step 1</div>
                         <h3>20-Minute Conversation</h3>
-                        <p>How your business uses AI today, what's working, and what isn't.</p>
-                        <div class="step-detail">Video call · No obligation</div>
+                        <p>Over a coffee or video call, we look at how your business uses AI today, what's working, and what isn't.</p>
+                        <div class="step-detail">20 minutes</div>
                     </div>
 
                     <div class="step reveal">
@@ -1297,8 +1297,8 @@
                         </div>
                         <div class="step-label">Step 2</div>
                         <h3>AI Discovery Session</h3>
-                        <p>If there's a mutual fit, we work hands-on. We look at real workflows, real prompts, and real outputs across roles.</p>
-                        <div class="step-detail">Half day · On-site or remote</div>
+                        <p>We sit with you and look at real workflows, real prompts, and real outputs across roles.</p>
+                        <div class="step-detail">Hands-on with your business</div>
                     </div>
 
                     <div class="step reveal">
