--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,7 @@
             <section id="top" class="hero-section">
                 <h1>Brisbane AI Training That Actually Works</h1>
                 <p class="subtitle">Your team has ChatGPT, Copilot, and AI tools, but can you measure the results?</p>
-                <p class="subtitle" style="font-size: 0.95em; opacity: 0.85; margin-top: 8px;">Free learning resources. Expert implementation when you're ready.</p>
+                <p class="subtitle" style="font-size: 0.95em; opacity: 0.85; margin-top: 8px;">Free learning resources. Hands-on implementation when you're ready.</p>
             </section>
             
             <!-- CONTENT SECTION -->
