--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
             <!-- HERO SECTION -->
             <section id="top" class="hero-section">
                 <h1>Brisbane AI Training That Actually Works</h1>
-                <p class="subtitle">Your team has ChatGPT, Copilot, and AI tools, but can you measure the results?</p>
+                <p class="subtitle">AI is already in your business. You just don't know if it's helping or hurting.</p>
                 <p class="subtitle" style="font-size: 0.95em; opacity: 0.85; margin-top: 8px;">Free learning resources. Hands-on implementation when you're ready.</p>
             </section>
             
@@ -1300,6 +1300,7 @@
             <section id="work-with-us" class="cta-section">
                 <h3 class="reveal">Start with a knownstate.</h3>
                 <p class="reveal">A 20-minute conversation about where AI fits in your business.</p>
+                <p class="reveal" style="font-size: 0.88em; opacity: 0.7; max-width: 540px; margin: 16px auto 24px; line-height: 1.7;">Within 60 days, your team has repeatable workflows, standard prompts tailored to each role, measurable time savings, and managers who can see what's working.</p>
                 <button class="cta-button" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/griffithsben-pm/30min'});return false;">Start a Conversation</button>
                 
                 <div class="footer-main">
