--- a/prompt-examples.html
+++ b/prompt-examples.html
@@ -1504,6 +1504,18 @@
 
     </div>
 
+    <!-- NEXT PAGE LINK -->
+    <div style="max-width: 480px; margin: 0 auto; padding: 20px 20px 30px;">
+        <a href="beyond-prompts.html" style="font-family: 'Inter', sans-serif; display: flex; align-items: center; gap: 16px; padding: 24px; background: white; border: 1px solid #e5e5e5; border-radius: 12px; text-decoration: none; transition: all 0.2s;" onmouseover="this.style.borderColor='#1F7A8C';this.style.transform='translateY(-2px)';this.style.boxShadow='0 4px 12px rgba(0,0,0,0.06)'" onmouseout="this.style.borderColor='#e5e5e5';this.style.transform='none';this.style.boxShadow='none'">
+            <span style="font-size: 1.6em; flex-shrink: 0;">⚡</span>
+            <div>
+                <div style="font-size: 0.95em; font-weight: 600; color: #022B3A; margin-bottom: 4px;">Beyond Prompts</div>
+                <div style="font-size: 0.82em; color: #666;">AI agents that automate entire workflows</div>
+            </div>
+            <span style="margin-left: auto; color: #1F7A8C; font-weight: 600;">→</span>
+        </a>
+    </div>
+
     <!-- CTA -->
     <section class="page-cta">
         <h3>These results come from structured prompting, not better tools.</h3>
